<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auto Reply</string>
    <!-- Main -->
    <string name="main_dialog_edit">Edit</string>
    <string name="main_dialog_delete">Delete</string>
    <string name="main_about_dialog_ok">OK</string>
    <string name="main_about_dialog_message">
        <![CDATA[
			by <i>Inviera IT Solutions Pvt Ltd</i>\n<b>Version</b> 1.0 \nAny feedback is welcome.
		]]>
    </string>
    <!-- Main menu -->
    <string name="main_menu_new">Add Rule</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_outbox">View Outbox</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_instructions">Instructions</string>
    <!-- AddEdit -->
    <string name="addedit_title">Add Rule</string>
    <string name="addedit_editText_name">Add unique name</string>
    <string name="addedit_editText_description">Add short description</string>
    <string name="addedit_editText_text">The text to be replied to calls/texts</string>
    <string name="addedit_textView_contacts">Contacts only?</string>
    <string name="addedit_textView_replyTo">Reply to</string>
    <string name="addedit_radio_both">Both</string>
    <string name="addedit_radio_sms">Texts</string>
    <string name="addedit_radio_call">Calls</string>
    <!-- AddEdit menu -->
    <string name="addedit_menu_save">Save</string>
    <!-- ContactPicker -->
    <string name="contactpicker_title">Contact Picker</string>
    <!-- ContactPicker menu -->
    <string name="contactpicker_menu_selectAll">Select All</string>
    <string name="contactpicker_menu_deselectAll">Deselect All</string>
    <string name="contactpicker_menu_done">Done</string>
    <!-- Outbox -->
    <string name="outbox_title">Outbox</string>
    <string name="outbox_text_empty">You have no messages to view</string>
    <string name="outbox_dialog_deleteAll">Delete All</string>
    <string name="outbox_dialog_cancel">Cancel</string>
    <!-- Outbox menu -->
    <string name="outbox_menu_deleteAll">Delete All</string>
    <!-- Instructions -->
    <string name="instructions_title">Instructions</string>
    <string name="instructions">
		<![CDATA[
			<h2>Rules</h2>
				<p>Rule names must be unique.</p>
				<p>Only the name and text fields are required.</p>
				<p>Rule texts longer than 160 characters (SMS limit) are supported, but will be sent as multiple SMSs</p>
				<p>Press and hold on a Rule on the main window to edit or delete it.</p>
				<p>On receiving an SMS or a call, all applicable rules will be invoked.</p>
			<h2>Widgets</h2>
				<p>Only 1 widget per rule is allowed.</p>
				<p>After a rule has been deleted, its widget needs to be manually deleted.</p>
			<h2>Settings</h2>
				<p>You can set call rule applications to silence the call when they\'re invoked.</p>
		]]>
    </string>
    <!-- Widget -->
    <string name="configure_title">Add ARM Widget</string>
    <string name="configure_text_info">Select a rule</string>
    <string name="configure_text_empty">You have no Rules from which to create a widget</string>
    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_mute_text">Rules mute calls after: </string>

    <string-array name="settings_mute_spinner_array">
        <item>Off</item>
        <item>0 sec</item>
        <item>3 sec</item>
        <item>5 sec</item>
        <item>10 sec</item>
    </string-array>
    <!-- Shared Preferences -->
    <string name="shared_preferences_key">COM.MHMT.AUTOTEXTMATE</string>
    <string name="settings_mute_position_key">com.mhmt.autotextmate.mutedelayposition</string>




</resources>