<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.AddEditRule" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ProgressBar
            android:id="@+id/addedit_progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone" >
        </ProgressBar>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5sp" >

        <LinearLayout
            android:id="@+id/addRule_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addedit_editText_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="20"
                android:singleLine="true"
                android:maxLines="1" />

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:maxLength="40"
                android:hint="@string/addedit_editText_description"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:maxLines="1" />

            <EditText
                android:id="@+id/editText_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:hint="@string/addedit_editText_text"
                android:inputType="textMultiLine" />



            <LinearLayout
                android:id="@+id/linearLayout_replyTo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5sp" >

                <TextView
                    android:id="@+id/textView_replyTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/addedit_textView_replyTo" />

                <RadioGroup
                    android:id="@+id/radio_replyTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radio_both"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tag="0"
                        android:text="@string/addedit_radio_both" />

                    <RadioButton
                        android:id="@+id/radio_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="1"
                        android:text="@string/addedit_radio_sms" />

                    <RadioButton
                        android:id="@+id/radio_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="2"
                        android:text="@string/addedit_radio_call" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:id="@+id/linearLayout_contactsFilter">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Contacts Filter"/>

                <Switch
                    android:id="@+id/switch_contactsFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_contactsOnly"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5sp" >

                <TextView
                    android:id="@+id/textView_contactsOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/addedit_textView_contacts" />

                <CheckBox
                    android:id="@+id/checkBox_contactsOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="Include..."
                    android:onClick="launchIncludeContactPicker"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="8"
                    android:text="Exclude..."
                    android:onClick="launchExcludeContactPicker"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>